XP-4482 Content Wizard toolbar - Fix menu overflow and alignment of the help-text icon
Added smooth slide effect for help button, when minimize button starts to overlap it.

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
@@ -11,8 +11,10 @@
       display: block;
     }
 
-    .wizard-step-navigator-and-toolbar .help-text-button {
-      margin-right: 40px;
+    .wizard-step-navigator-and-toolbar.pre-scroll-stick {
+      .help-text-button {
+        margin-right: 40px;
+      }
     }
   }
 
