--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -123,7 +123,7 @@
     overflow: hidden;
     z-index: @z-index-mask - 1;
     cursor: pointer;
-
+    transition: 0.3s;
 
     &:after {
       display: block;
